# reflectance

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  abstract__assigner_8hpp.html  abstract__assigner_8hpp_source.html  abstract__object__factory_8hpp.html  abstract__object__factory_8hpp_source.html  abstract__property_8hpp.html  abstract__property_8hpp_source.html  annotated.html  any_8hpp.html  any_8hpp_source.html  assigner_8hpp.html  assigner_8hpp_source.html  classes.html  classreflectance_1_1abstract__assigner-members.html  classreflectance_1_1abstract__assigner.html  classreflectance_1_1abstract__object__factory-members.html  classreflectance_1_1abstract__object__factory.html  classreflectance_1_1abstract__property-members.html  classreflectance_1_1abstract__property.html  classreflectance_1_1any-members.html  classreflectance_1_1any.html  classreflectance_1_1any__wrapper-members.html  classreflectance_1_1any__wrapper.html  classreflectance_1_1assigner-members.html  classreflectance_1_1assigner.html  classreflectance_1_1bad__accessor__call-members.html  classreflectance_1_1bad__accessor__call.html  classreflectance_1_1bad__any__cast-members.html  classreflectance_1_1bad__any__cast.html  classreflectance_1_1bad__property__cast-members.html  classreflectance_1_1bad__property__cast.html  classreflectance_1_1directly__linked__property-members.html  classreflectance_1_1directly__linked__property.html  classreflectance_1_1linked__property-members.html  (+44 more)
examples/: main.cpp
include/reflectance/: abstract_assigner.hpp  abstract_object_factory.hpp  abstract_property.hpp  any.hpp  assigner.hpp  directly_linked_property.hpp  exception.hpp  linked_property.hpp  object_factories.hpp  object_factory.hpp  properties.hpp  property.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+18 more)
